--- a/style.css
+++ b/style.css
@@ -3,18 +3,18 @@
 }
 
 html {
-  height: 100%;
   font-family: "Times New Roman", Times, serif;
   font-style: inherit;
 }
 
 body {
-  min-height: 100%;
+  height: 100%;
+  max-width: 1200px;
   margin: 0px;
   background-color: white;
 }
 
-@media screen and (min-width: 769px) and (max-width: 1200px) {
+@media screen and (max-width: 1800px) {
   header {
     display: flex;
     flex-direction: column;
@@ -59,6 +59,7 @@ body {
   .header-banner {
     margin: 10px;
     height: 40px;
+    font-size: 32px;
     background-color: #fed703;
     border: 20px solid;
     border-color: #fe8b00;
@@ -70,8 +71,6 @@ body {
     margin: 20px;
     padding: 20px;
     background-color: #000002;
-    /*border: 20px, solid;
-    border-color: #000002;*/
     display: flex;
     gap: 20px;
   }
@@ -86,6 +85,7 @@ body {
   .articles-container {
     display: flex;
   }
+
   .articles-pair {
     width: 50%;
     display: flex;
@@ -128,5 +128,67 @@ body {
     background-color: #f0e78c;
     padding: 10px;
     border: solid, 20px;
+  }
+}
+@media screen and (max-width: 769px) {
+  header {
+    background-color: #2c4159;
+    border: 20px, solid;
+  }
+
+  .header-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+  }
+
+  .logo,
+  .nav,
+  .social {
+    width: auto;
+    margin: 20px;
+    padding: 10px;
+    border: 0px;
+  }
+
+  .header-banner {
+    margin: 0px;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+  .section {
+    width: auto;
+    padding: 0px;
+  }
+  .articles-container {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+  }
+
+  .navigation {
+    margin: 0 20px 20px 20px;
+  }
+  aside {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px;
+    gap: 10px;
+  }
+
+  .aside-container {
+    margin: 0px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .articles-container {
+    flex-direction: column;
+  }
+  .articles-pair {
+    width: 100%;
   }
 }
